--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
   <form class="form">
     <h2 class="form__title">Add your comment</h2>
     <fieldset class="form__text-field">
-      <label for="first-name" class="form__text-label">First Name</label>
-      <input type="text" id="first-name" class="form__text-input">
-      <label for="surname" class="form__text-label">Last Name</label>
-      <input type="text" id="surname" class="form__text-input">
-      <label for="comment" class="form__text-label">Comment</label>
-      <textarea id="comment" cols="30" rows="10" class="form__textarea"></textarea>
+
+        <input type="text" id="first-name" class="form__text-input">
+        <label for="first-name" class="form__text-label">First Name</label>
+
+        <input type="text" id="surname" class="form__text-input">
+        <label for="surname" class="form__text-label">Last Name</label>
+
+        <textarea id="comment" cols="30" rows="10" class="form__textarea"></textarea>
+        <label for="comment" class="form__textarea-label">Comment</label>
+
     </fieldset>
     <fieldset class="form__radio-field">
       <div class="form__radio-container">
