--- a/index.html
+++ b/index.html
@@ -24,14 +24,19 @@
 
     </fieldset>
     <fieldset class="form__radio-field">
-      <div class="form__radio-container">
-        <input type="radio" name="privacy" id="private" checked>
-        <label for="private" class="form__radio-label">Keep Anonymous</label>
-      </div>
-      <div class="form__radio-container">
-        <input type="radio" name="privacy" id="public">
-        <label for="public" class="form__radio-label">Make public</label>
-      </div>
+
+        <label for="private" class="form__radio-label">
+          <input type="radio" name="privacy" id="private" class="form__radio" checked>
+          <div class="form__custom-radio"></div>
+          Keep Anonymous
+        </label>
+
+        <label for="public" class="form__radio-label">
+          <input type="radio" name="privacy" id="public" class="form__radio">
+          <div class="form__custom-radio"></div>
+          Make public
+        </label>
+
     </fieldset>
   </form>
 </body>
