Animated radio styling

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <label for="private" class="form__radio-label">
           <input type="radio" name="privacy" id="private" class="form__radio" checked>
           <div class="form__custom-radio"></div>
-          Keep Anonymous
+          <span class="form__radio-label-text">Post anonymously</span>
         </label>
 
         <label for="public" class="form__radio-label">
           <input type="radio" name="privacy" id="public" class="form__radio">
           <div class="form__custom-radio"></div>
-          Make public
+          <span class="form__radio-label-text">Display name</span>
         </label>
 
     </fieldset>
