--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h2 class="form__title">Add your comment</h2>
     <fieldset class="form__text-field">
 
-        <input type="text" id="first-name" class="form__text-input">
+        <input type="text" id="first-name" class="form__text-input" value="">
         <label for="first-name" class="form__text-label">First Name</label>
 
-        <input type="text" id="surname" class="form__text-input">
+        <input type="text" id="surname" class="form__text-input" value="">
         <label for="surname" class="form__text-label">Last Name</label>
 
-        <textarea id="comment" cols="30" rows="10" class="form__textarea"></textarea>
+        <textarea id="comment" cols="30" rows="10" class="form__textarea" value=""></textarea>
         <label for="comment" class="form__textarea-label">Comment</label>
 
     </fieldset>
